# pdfz

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
evals/: run_evals.py
src/pdfz/: auth.py  eval_runner.py  ingest.py  mcp_server.py  models.py  page_cache.py  pdf_utils.py  server.py  store.py
src/pdfz/templates/: index.html  login.html
